src/lab/oracle/snapshots/asupersync__lab__oracle__quiescence__tests__quiescence_cancel_during_drain_report.snap
---
source: src/lab/oracle/quiescence.rs
assertion_line: 888
expression: snapshot_report(&oracle)
---
{
  "invariant": "quiescence",
  "passed": false,
  "violation": "Quiescence violation: Region RegionId(0:0) closed at Time(75ns) without quiescence: 0 live children, 1 live tasks",
  "stats": {
    "entities_tracked": 1,
    "events_recorded": 3
  }
}
