src/lab/oracle/snapshots/asupersync__lab__oracle__quiescence__tests__quiescence_clean_close_report.snap
---
source: src/lab/oracle/quiescence.rs
assertion_line: 866
expression: snapshot_report(&oracle)
---
{
  "invariant": "quiescence",
  "passed": true,
  "stats": {
    "entities_tracked": 1,
    "events_recorded": 3
  }
}
